--- a/gk/curtain/phone/about-us-dark.html
+++ b/gk/curtain/phone/about-us-dark.html
@@ -18,8 +18,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us Dark</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us-dark.css?crc=443728176" id="pagesheet"/>
-    <!--/*
+  <link rel="stylesheet" type="text/css" href="css/about-us-dark.css?crc=4132715629" id="pagesheet"/>
+    <!--custom head HTML-->
+  <style>#u5319 {  pointer-events: none;}</style>
+  <!--/*
 
 */
 -->
@@ -27,32 +29,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu5072"><!-- group -->
-    <!-- m_editable region-id="editable-static-tag-U5072-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext museBGSize mse_pre_init" id="u5072" href="home-dark.html" data-href="page:U4456" data-muse-uid="U5072"><!-- content --></a>
-    <!-- /m_editable -->
-    <div class="museBGSize mse_pre_init" id="u5073"><!-- content --></div>
-    <div class="museBGSize mse_pre_init" id="u5074"><!-- content --></div>
-    <div class="museBGSize mse_pre_init" id="u5075"><!-- content --></div>
-    <!-- m_editable region-id="editable-static-tag-U5076-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix mse_pre_init" id="u5076-4" href="gallery-dark.html" data-href="page:U4528" data-muse-uid="U5076" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U5077-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix mse_pre_init" id="u5077-4" data-muse-uid="U5077" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>Store</p>
-    </div>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U5078-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext MuseLinkActive clearfix mse_pre_init" id="u5078-4" href="about-us-dark.html" data-href="page:U4590" data-muse-uid="U5078" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U5079-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix mse_pre_init" id="u5079-4" href="games-dark.html" data-href="page:U4658" data-muse-uid="U5079" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
-    <!-- /m_editable -->
-    <div class="ose_pre_init mse_pre_init" id="u5080"><!-- content --></div>
-   </div>
-   <div class="clearfix grpelem" id="pu4580-13"><!-- column -->
+   <div class="clearfix grpelem" id="pu4580-13"><!-- group -->
     <!-- m_editable region-id="editable-static-tag-U4580-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u4580-13" data-muse-uid="U4580" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+    <div class="clearfix grpelem" id="u4580-13" data-muse-uid="U4580" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
      <p id="u4580-2">About Us</p>
      <p id="u4580-3">&nbsp;</p>
      <p id="u4580-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex</p>
@@ -61,8 +40,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <p id="u4580-11">dolore eu fugiat nulla pariatur.</p>
     </div>
     <!-- /m_editable -->
-    <div class="museBGSize colelem" id="u4582"><!-- content --></div>
-    <div class="clearfix colelem" id="u5131"><!-- group -->
+    <div class="museBGSize grpelem" id="u4582"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U5129-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix grpelem" id="u5129-4" data-muse-uid="U5129" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p>© Gods Kid Inc 2020</p>
+    </div>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U5130-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext museBGSize grpelem" id="u5130" href="http://www.tacklebox.company" target="_blank" data-muse-uid="U5130"><!-- content --></a>
+    <!-- /m_editable -->
+    <div class="clearfix grpelem" id="u5131"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U5133-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link" -->
      <div class="clearfix grpelem" id="u5133-4" data-muse-uid="U5133" data-muse-type="txt_frame"><!-- content -->
       <p>Store</p>
@@ -93,16 +80,34 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u5138-4" href="games-dark.html" data-href="page:U4658" data-muse-uid="U5138" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
      <!-- /m_editable -->
     </div>
-    <!-- m_editable region-id="editable-static-tag-U5129-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u5129-4" data-muse-uid="U5129" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>© Gods Kid Inc 2020</p>
+    <div class="grpelem" id="u5319"><!-- animation -->
+     <iframe class="animationContainer an_invi" id="U5322_animation" src="../assets/curtain_night_mobile/curtain_night_mobile.html" scrolling="no"></iframe>
+    </div>
+   </div>
+   <div class="clearfix grpelem" id="pu5072"><!-- group -->
+    <!-- m_editable region-id="editable-static-tag-U5072-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext museBGSize mse_pre_init" id="u5072" href="home-dark.html" data-href="page:U4456" data-muse-uid="U5072"><!-- content --></a>
+    <!-- /m_editable -->
+    <div class="museBGSize mse_pre_init" id="u5073"><!-- content --></div>
+    <div class="museBGSize mse_pre_init" id="u5074"><!-- content --></div>
+    <div class="museBGSize mse_pre_init" id="u5075"><!-- content --></div>
+    <!-- m_editable region-id="editable-static-tag-U5076-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix mse_pre_init" id="u5076-4" href="gallery-dark.html" data-href="page:U4528" data-muse-uid="U5076" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Gallery</p></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U5077-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+    <div class="clearfix mse_pre_init" id="u5077-4" data-muse-uid="U5077" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+     <p>Store</p>
     </div>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U5130-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext museBGSize colelem" id="u5130" href="http://www.tacklebox.company" target="_blank" data-muse-uid="U5130"><!-- content --></a>
+    <!-- m_editable region-id="editable-static-tag-U5078-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext MuseLinkActive clearfix mse_pre_init" id="u5078-4" href="about-us-dark.html" data-href="page:U4590" data-muse-uid="U5078" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>About Us</p></a>
     <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U5079-BP_infinity" template="phone/about-us-dark.html" data-type="html" data-ice-options="disableImageResize,link,clickable,txtStyleTarget" data-ice-editable="link" -->
+    <a class="nonblock nontext clearfix mse_pre_init" id="u5079-4" href="games-dark.html" data-href="page:U4658" data-muse-uid="U5079" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content --><p>Games</p></a>
+    <!-- /m_editable -->
+    <div class="ose_pre_init mse_pre_init" id="u5080"><!-- content --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="797" data-content-above-spacer="796" data-content-below-spacer="29"></div>
+   <div class="verticalspacer" data-offset-top="826" data-content-above-spacer="826" data-content-below-spacer="0"></div>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -119,6 +124,7 @@ var muse_init=function(){require.config({baseUrl:"../"});require(["jquery","muse
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
+Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $('#u5072').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
