--- a/amco/index.html
+++ b/amco/index.html
@@ -62,11 +62,11 @@
                 <a class="atrs page-scroll" href="#artist">Artists</a>
             </div>
             <div id="social" class="apparitionSocials">
-                <a href="https://www.instagram.com/anatlantacompany" class="icon" id="instagram">&nbsp;</a>
-                <a href="https://twitter.com/anatlantaco" class="icon" id="twitter">&nbsp;</a>
-                <!-- <a href="https://www.tiktok.com/@anatlantacompany" class="icon ipng"><img src="img/tiktok.png" width="20"></a> -->
+                <a href="https://www.instagram.com/amcosounds" class="icon" id="instagram">&nbsp;</a>
+                <a href="https://twitter.com/amcosounds" class="icon" id="twitter">&nbsp;</a>
+                <!-- <a href="https://www.tiktok.com/@amcosounds" class="icon ipng"><img src="img/tiktok.png" width="20"></a> -->
 				<!-- LANCE TIKTOK FIX -->
-				<a href="https://www.tiktok.com/@anatlantacompany" class="icon" id="tiktok">&nbsp;</a>
+				<a href="https://www.tiktok.com/@amcosounds" class="icon" id="tiktok">&nbsp;</a>
                 <a href="https://open.spotify.com/playlist/3P5lvPs2CElZ4VLo6g3d5K?si=6a5dba9cd154415d" class="icon" id="spotify">&nbsp;</a>
 				<a href="https://www.nts.live/shows/an-atlanta-company-presents-it-s-up" class="icon" id="nts">&nbsp;</a>
             </div>
@@ -91,102 +91,54 @@
                 <div class="artist-cont">
 
                     <div class="row justify-content-center">
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
 							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/10AY17ALos2o3akPqrPydw?si=-4x67zSOQ2WQYeNbgTVfYQ">
+								<a href="https://open.spotify.com/artist/10AY17ALos2o3akPqrPydw?si=_V3A5jo8SyqBRsC9pUw3rg&dl_branch=1">
 									<img src="img/roster/Father_Photo.jpg">
 									<div class="artname"><span>Father</span></div>
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
 							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/3ZJxEmjYZd5VOqZ8o3aXiL?si=c2_e0YL2QK6ss6nHQbInUA">
-									<img src="img/roster/ABRA_Photo.jpg">
-									<div class="artname"><span>ABRA</span></div>
+								<a href="https://open.spotify.com/artist/4PfKPdq8QEgcerLwGApWIp?si=-J6PPoDBR0u2gr2rO8szfw&dl_branch=1">
+									<img src="img/roster/EGOVERT_Photo.jpg">
+									<div class="artname"><span>Egovert</span></div>
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
 							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/1UH80jhsYsFztK0anu2FNS?si=VQNxZXPpSDetCR2H_LQJXg">
-									<img src="img/roster/Zack_Fox_Photo.jpg">
-									<div class="artname"><span>Zack Fox</span></div>
+								<a href="https://open.spotify.com/artist/56l5jbQerCGh7lfbwLnfaK?si=TtAP_j9CSgaUp5z7J332sQ&dl_branch=1">
+									<img src="img/roster/angelus_Photo.jpeg">
+									<div class="artname"><span>angelus</span></div>
 								</a>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
+						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
 							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/2dZGZpAgfWlVxCSFDqbytg?si=nPE9HCJqTCyotQlizW-1SQ">
-									<img src="img/roster/Since99_Photo.jpg">
-									<div class="artname"><span>Since99</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://genius.com/artists/Ethereal">
-									<img src="img/roster/Ethereal_Photo.jpg">
-									<div class="artname"><span>Ethereal</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/699OTQXzgjhIYAHMy9RyPD?si=4fTThNgdRzW1R6LNCy7kUw">
-									<img src="img/roster/Playboi_Carti_Photo.jpg">
-									<div class="artname"><span>Playboi Carti</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/2qDdxfKUpYg8wc49KIuT3b?si=rSnv3CgeQN6VMT4HejQ7Ig">
-									<img src="img/roster/Tommy_Genesis_Photo.jpg">
-									<div class="artname"><span>Tommy Genesis</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/6bnlvICBjK7fuNSB1ohqS5?si=c3oTirp6R9ODa0IyZm6vjw">
-									<img src="img/roster/Danger_Incorporated_Photo.jpg">
-									<div class="artname"><span>Danger<br> Incorporated</span></div>
-								</a>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/5szilpXHcwOqnyKLqGco5j?si=KczswTt-Qk-6MmX_Hah7ag">
-									<img src="img/roster/Faye_Webster_Photo.jpg">
-									<div class="artname"><span>Faye Webster</span></div>
-								</a>
-							</div>
-						</div>
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-4">
-                            <div class="artphoto">
-                                <a href="https://open.spotify.com/artist/4PfKPdq8QEgcerLwGApWIp?si=hHlTq6R4Qn6P4-xuBt3eFA">
-                                    <img src="img/roster/EGOVERT_Photo.jpg">
-                                    <div class="artname"><span>Egovert</span></div>
-                                </a>
-                            </div>
-                        </div>
-						<div class="col-lg-3 col-md-4 col-sm-4 col-4">
-							<div class="artphoto">
-								<a href="https://open.spotify.com/artist/3YqwRvYhfxmCFYIfvxaCAa?si=eakHN-q3SEOlzf3QetyBdw">
+								<a href="https://www.youtube.com/channel/UC5HgDpueurhM9oA2DPLGXlw">
 									<img src="img/roster/Goonew_Photo.jpg">
 									<div class="artname"><span>Goonew</span></div>
 								</a>
 							</div>
 						</div>
-                        <div class="col-lg-3 col-md-4 col-sm-4 col-4">
-                            <div class="artphoto">
-                                <a href="https://genius.com/artists/Marc-boomin">
-                                    <img src="img/roster/Marc_Boomin_Photo.jpg">
-                                    <div class="artname"><span>Marc Boomin</span></div>
-                                </a>
-                            </div>
-                        </div>
+						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+							<div class="artphoto">
+								<a href="https://www.youtube.com/channel/UCQ1SGQH1iBnfnNW1XcK4zxQ">
+									<img src="img/roster/Since99_Photo.jpg">
+									<div class="artname"><span>Since99</span></div>
+								</a>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-4 col-sm-4 col-4">
+							<div class="artphoto">
+								<a href="https://genius.com/artists/Razjah">
+									<img src="img/roster/Razjah_Photo.jpeg">
+									<div class="artname"><span>Razjah</span></div>
+								</a>
+							</div>
+						</div>
                     </div>
 
 					<!-- artists we've worked with used to be here -->
@@ -198,11 +150,11 @@
                 <div class="dsj">
                     <div class="mb-3"><img src="img/logo.png" width="75"></div>
                     <div id="socialFooter">
-                        <a href="https://www.instagram.com/anatlantacompany" class="icon" id="instagram">&nbsp;</a>
-                        <a href="https://twitter.com/anatlantaco" class="icon" id="twitter">&nbsp;</a>
-                        <!-- <a href="https://www.tiktok.com/@anatlantacompany" class="icon ipng2"><img src="img/tiktok.png" width="20"></a> -->
+                        <a href="https://www.instagram.com/amcosounds" class="icon" id="instagram">&nbsp;</a>
+                        <a href="https://twitter.com/amcosounds" class="icon" id="twitter">&nbsp;</a>
+                        <!-- <a href="https://www.tiktok.com/@amcosounds" class="icon ipng2"><img src="img/tiktok.png" width="20"></a> -->
 						<!-- LANCE TIKTOK FIX -->
-						<a href="https://www.tiktok.com/@anatlantacompany" class="icon" id="tiktok">&nbsp;</a>
+						<a href="https://www.tiktok.com/@amcosounds" class="icon" id="tiktok">&nbsp;</a>
                         <a href="https://open.spotify.com/playlist/3P5lvPs2CElZ4VLo6g3d5K?si=6a5dba9cd154415d" class="icon" id="spotify">&nbsp;</a>
 						<a href="https://www.nts.live/shows/an-atlanta-company-presents-it-s-up" class="icon" id="nts">&nbsp;</a>
                     </div>
