--- a/RODWAVE2021/index.html
+++ b/RODWAVE2021/index.html
@@ -120,7 +120,7 @@ by tacklebox / coded by @LScorrcho (2020)
 		<div class="testimonials">
 			<br>LISTEN TO MORE FAN TESTIMONIALS BELOW:
 			<br>
-			<iframe id="soundcloudembed" width="600px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+			<iframe id="soundcloudembed" width="600px" height="300px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"></iframe>
 		</div>
 
 		<!-- <div class="calltoaction">
@@ -146,7 +146,7 @@ by tacklebox / coded by @LScorrcho (2020)
 		</div>
 
 		<footer class="sticky_sc_footer">
-			<iframe id="sc_embed" width="100%" height="100px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+			<iframe id="sc_footer_embed" width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1231902859&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=false"></iframe>
 		</footer>
 
 		<script src="js/jquery-3.5.1.min.js" charset="utf-8"></script>
