--- a/LILDURK/index.html
+++ b/LILDURK/index.html
@@ -44,7 +44,7 @@
 			<div class="socials">
 				<p>SHARE YOUR NICKNAME:
 				<br><br><img class="socialimg" src="img/social/instagram.png" alt="Instagram">
-				<img class="socialimg" src="img/social/twitter.png" alt="Twitter">
+				<a id="twitter_share_btn" href="" target="_blank"><img class="socialimg" src="img/social/twitter.png" alt="Twitter"></a>
 				<img class="socialimg" src="img/social/snapchat.png" alt="Snapchat">
 				<img class="socialimg" src="img/social/facebook.png" alt="Facebook">
 			</div>
